<resources>
    <string name="app_name">Rutas de Inspección</string>

    <!-- Menu administrador. -->
    <string name="menu_administrador_actualizar">Actualizar</string>
    <string name="menu_administrador_respaldo">Respaldo</string>
    <string name="menu_administrador_salir">Cerrar sesión</string>

    <!-- Menu Login. -->
    <string name="menu_login_salir">Salir</string>

    <!-- Login. -->
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="activity_login_txtusuario">Nombre de usuario</string>
    <string name="activity_login_txtpassword">Contraseña</string>
    <string name="activity_login_btnLogin">Inicio de sesión</string>
    <string name="activity_login_btnCancelar">Cancelar</string>
    <string name="activity_login_btnActualizar">Actualizar</string>

    <!-- Administrador. -->
    <string name="title_activity_administrador">Administrador</string>

    <!-- Captura de ruta de inspección. -->
    <string name="title_activity_ruta_inspeccion">Captura de ruta de inspección</string>
    <string name="activity_ruta_inspeccion_title_sDatosGenerales">Lotes de reproducción de semilla</string>
    <string name="activity_ruta_inspeccion_txtFolio">Folio:</string>
    <string name="activity_ruta_inspeccion_sCiclo">Ciclo:</string>
    <string name="activity_ruta_inspeccion_txtCliente">Cliente:</string>
    <string name="activity_ruta_inspeccion_txtProductor">Productor:</string>
    <string name="activity_ruta_inspeccion_txtPredio">Predio:</string>
    <string name="activity_ruta_inspeccion_txtLote">Lote:</string>
    <string name="activity_ruta_inspeccion_txtFecha">Fecha:</string>
    <string name="activity_ruta_inspeccion_txtEstatus">Estatus:</string>
    <!-- Radio button recomendaciones. -->
    <string name="activity_rutainspeccion_rSi">Si</string>
    <string name="activity_rutainspeccion_rNo">No</string>

    <string name="activity_ruta_recomendacion_tecnica">¿El productor consultó las recomendaciones técnicas?</string>

    <string name="activity_ruta_inspeccion_title_sSiembra">1.- Siembra</string>
    <string name="activity_ruta_inspeccion_SistemaProduccion">Sistema de producción:</string>
    <string name="activity_ruta_inspeccion_ArregloTopologico">Arreglo topologico:</string>

    <string name="activity_ruta_inspeccion_title_sCondicionesSiembra">Condiciones en la siembra</string>
    <string name="activity_ruta_inspeccion_profundidad">a. Profundidad de siembra adecuada  (de 3 a 5 cm)</string>
    <string name="activity_ruta_inspeccion_surco">b. Profundidad de surco adecuada (mín 15 cm)</string>
    <string name="activity_ruta_inspeccion_manejo">c. Manejo adecuado de la siembra (siembra homogenea, bien distribuida de acuerdo al arreglo topológico)</string>

    <string name="activity_ruta_inspeccion_title_sRiego">2.- Riego</string>
    <string name="activity_ruta_inspeccion_pozo">Pozo</string>
    <string name="activity_ruta_inspeccion_capacidad">Capacidad</string>
    <string name="activity_ruta_inspeccion_gravedad">Gravedad</string>
    <string name="activity_ruta_inspeccion_aspersion">Aspersión</string>
    <string name="activity_ruta_inspeccion_goteo">Goteo</string>
    <string name="activity_ruta_inspeccion_canal">Canal</string>
    <string name="activity_ruta_inspeccion_riego_otro">Otro</string>

    <string name="activity_ruta_inspeccion_title_sEtapa">3.- Etapa fenológica</string>
    <string name="activity_ruta_inspeccion_etapa">Etapa principal Zadoks:</string>
    <string name="activity_ruta_inspeccion_exposicion">Exposición de la excersión:</string>
    <string name="activity_ruta_inspeccion_title_sCondicionesDesarrollo">Condiciones de desarrollo</string>
    <string name="activity_ruta_inspeccion_title_sRecomendaciones">Recomendaciones y observaciones</string>
    <string name="activity_ruta_inspeccion_regar">Regar</string>
    <string name="activity_ruta_inspeccion_desmezclar">Desmezclar</string>
    <string name="activity_ruta_inspeccion_fungicida">Aplicar fungicida</string>
    <string name="activity_ruta_inspeccion_insecticida">Aplicar insecticida</string>
    <string name="activity_ruta_inspeccion_herbicida">Aplicar herbicida</string>
    <string name="activity_ruta_inspeccion_desaguar">Desaguar</string>
    <string name="activity_ruta_inspeccion_descostrar">Descostrar</string>
    <string name="activity_ruta_inspeccion_recomendacion_otro">Otro</string>

    <string name="activity_ruta_inspeccion_title_sManejo">4.- Manejo de agroquímicos</string>
    <string name="activity_ruta_inspeccion_orden">a. Orden correcto de preparación de mezcla (Acidificante, polvos y granos, concentrado emulsionable, coadyuvante o adherente)</string>
    <string name="activity_ruta_inspeccion_regula">b. Regula pH del agua</string>
    <string name="activity_ruta_inspeccion_uso">c. Uso adecuado de boquillas</string>
    <string name="activity_ruta_inspeccion_hora">d. Hora de aplicación</string>
    <string name="activity_ruta_inspeccion_agua">e. Agua de canal para aplicaciones</string>

    <string name="activity_ruta_inspeccion_title_sProblemas">5.- Problemas o anomalías detectados</string>
    <string name="activity_ruta_inspeccion_inundacion">1. Inundación (apozolamiento, encostramiento)</string>
    <string name="activity_ruta_inspeccion_poblacion">2. Baja población de plantas</string>
    <string name="activity_ruta_inspeccion_problema">3. Problemas en la aplicación de nutrientes</string>
    <string name="activity_ruta_inspeccion_alteracion">4. Alteración de ciclo (acortamiento/alargamiento)</string>
    <string name="activity_ruta_inspeccion_aplicacion">5. Aplicación adecuada de agroquímicos</string>
    <string name="activity_ruta_inspeccion_temperatura">6. Altas temperaturas</string>
    <string name="activity_ruta_inspeccion_fito">7. Fitotoxicidad</string>
    <string name="activity_ruta_inspeccion_plaga_mal">8. Plagas mal controladas</string>
    <string name="activity_ruta_inspeccion_maleza">9. Maleza (principal)</string>
    <string name="activity_ruta_inspeccion_insecto">10. Insectos</string>
    <string name="activity_ruta_inspeccion_enfermedad">11. Enfermedad (principal)</string>
    <string name="activity_ruta_inspeccion_estado">Grado de infestación:</string>

    <string name="activity_ruta_inspeccion_potencial">6.- Potencial de rendimiento del cultivo</string>

    <string name="activity_ruta_inspeccion_comentario">Comentario</string>

    <string name="activity_ruta_inspeccion_btnGuardar">Guardar</string>
    <string name="activity_ruta_inspeccion_btnFotografia">Tomar fotografia</string>
    <string name="activity_ruta_inspeccion_btnEnviar">Enviar a IASA</string>

    <!-- Diagnostico de cultivo. -->
    <string name="title_activity_diagnostico_cultivo">Diagnostico de cultivo</string>
    <string name="title_activity_inspeccion_campo">Inspección de campo</string>

    <!-- Localizacion. -->
    <string name="title_activity_localizacion">Localización</string>

    <!-- Menu administrador. -->
    <string-array name="menu">
        <item>Iniciar captura de la ruta de inspección</item>
        <item>Ubicación del lote</item>
    </string-array>
</resources>
