<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingLeft="@dimen/login_padding_right"
    android:paddingRight="@dimen/login_padding_right"
    android:paddingTop="@dimen/login_vertical_margin"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/activity_login_txtusuario"
            android:inputType="textCapCharacters"
            android:text="CALC900728LT9"
            android:typeface="sans">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/activity_login_txtpassword"
            android:inputType="textPassword"
            android:text="hola1234"
            android:typeface="sans">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="1"
        android:layout_weight="0.09">

        <ImageButton
            android:id="@+id/login_btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_login_btnLogin"
            android:typeface="sans"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/login"
            android:layout_weight="0.18" />
    </LinearLayout>
</LinearLayout>
